Dev
desenvolvemndo restante codigo